feat: change text to name

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:id="@+id/name_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Kai Doe"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="20sp" />
 </LinearLayout>
