--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <style name="NameStyle">
-        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_marginTop">@dimen/layout_margin</item>
         <item name="android:fontFamily">@font/roboto</item>
-        <item name="android:padding">8dp</item>
+        <item name="android:paddingTop">@dimen/small_padding</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">@dimen/text_size</item>
     </style>
