--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ScrollView
+        android:id="@+id/bio_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
