--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/bio_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
