style: add lineSpacingMultiplier to 1.2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,10 @@
 
         <TextView
             android:id="@+id/bio_text"
+            style="@style/NameStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/bio"
-            style="@style/NameStyle" />
+            android:lineSpacingMultiplier="1.2"
+            android:text="@string/bio" />
     </ScrollView>
 </LinearLayout>
