--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,10 @@
     <EditText
         android:id="@+id/nickname_edit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        style="@style/NameStyle"
+        android:textAlignment="center"
+        android:hint="@string/what_is_your_nickname" />
 
     <ImageView
         android:id="@+id/star_image"
