--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,12 @@
 
     <EditText
         android:id="@+id/nickname_edit"
+        style="@style/NameStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/NameStyle"
-        android:textAlignment="center"
-        android:hint="@string/what_is_your_nickname" />
+        android:hint="@string/what_is_your_nickname"
+        android:inputType="textPersonName"
+        android:textAlignment="center" />
 
     <ImageView
         android:id="@+id/star_image"
