--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:text="@string/done" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/nickname_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
