refactor: reference the nickname in the data class

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:paddingBottom="@dimen/small_padding"
-            android:text=""
+            android:text="@={myName.nickname}"
             android:textAlignment="center"
             android:visibility="gone" />
 
