--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,15 @@
     <data>
         <variable
             name="myName"
-            type="com.example.aboutme.MyName"/>
+            type="com.example.aboutme.MyName" />
     </data>
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingStart="@dimen/layout_padding"
-        android:paddingEnd="@dimen/layout_padding"
-        tools:context=".MainActivity">
+        android:paddingStart="@dimen/padding"
+        android:paddingEnd="@dimen/padding">
 
         <TextView
             android:id="@+id/name_text"
@@ -23,10 +22,15 @@
             android:layout_height="wrap_content"
             android:text="@={myName.name}"
             android:textAlignment="center" />
-        <!--
-            @={} is a directive to get the data that is referenced inside the curly braces.
-            myName references the myName variable that you previously defined, which points to the myName data class and fetches the name property from the class.
-        -->
+
+        <TextView
+            android:id="@+id/nickname_text"
+            style="@style/NameStyle"
+            android:text="@={myName.nickname}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/nickname_edit"
@@ -35,7 +39,6 @@
             android:layout_height="wrap_content"
             android:hint="@string/what_is_your_nickname"
             android:inputType="textPersonName"
-            android:text=""
             android:textAlignment="center" />
 
         <Button
@@ -46,40 +49,31 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/layout_margin"
             android:fontFamily="@font/roboto"
-            android:text="@string/done" />
-
-        <TextView
-            android:id="@+id/nickname_text"
-            style="@style/NameStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
-            android:paddingBottom="@dimen/small_padding"
-            android:text="@={myName.nickname}"
-            android:textAlignment="center"
-            android:visibility="gone" />
+            android:text="@string/done"
+            android:textAlignment="center" />
 
         <ImageView
             android:id="@+id/star_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/layout_margin"
             android:contentDescription="@string/yellow_star"
             app:srcCompat="@android:drawable/btn_star_big_on" />
 
         <ScrollView
             android:id="@+id/bio_scroll"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/layout_margin">
 
             <TextView
                 android:id="@+id/bio_text"
-                style="@style/NameStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lineSpacingMultiplier="1.2"
-                android:text="@string/bio" />
+                android:lineSpacingMultiplier="@dimen/line_spacing_multiplier"
+                android:text="@string/bio"
+                android:textAppearance="@style/NameStyle" />
+
         </ScrollView>
     </LinearLayout>
 </layout>
