--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
 <resources>
     <dimen name="text_size">20sp</dimen>
     <dimen name="small_padding">8dp</dimen>
+    <dimen name="line_spacing_extra">8sp</dimen>
     <dimen name="layout_margin">16dp</dimen>
+    <dimen name="padding">16dp</dimen>
+    <dimen name="line_spacing_multiplier">16dp</dimen>
     <dimen name="layout_padding">16dp</dimen>
 </resources>
